Initial commit - work in progress.

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 JCG - The Java Code Generator
 
+
+==> THIS IS WORK IN PROGRESS AND CURRENTLY HARDLY USABLE. THIS WILL HOPEFULLY BE
+==> CHANGED IN THE NEXT COUPLE OF DAYS.
+
 Open Issues:
 ============
 
